Added base configuration file for swagger
